<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context="io.innofang.eventbusdemo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/intent_to_second_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/intent_to_second"/>

    <Button
        android:id="@+id/handle_sticky_button"
        android:text="@string/handle_sticky"
        android:onClick="onStickyClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
